Ajuste nas apis de registro & adição de swagger
