# api/app/Http/Requests/StoreRequest.php
@@ -1,40 +1,0 @@
-<?php
-
-namespace App\Http\Requests;
-
-use Illuminate\Foundation\Http\FormRequest;
-use App\Rules\CPF;
-use App\Rules\PasswordStrengthRule;
-/**
- * @OA\Ignore
- */
-class StoreRequest extends FormRequest
-{
-    public function authorize()
-    {
-        return true;
-    }
-
-    public function rules()
-    {
-        return [
-            'name' => ['required', 'string'],
-            'cpf' => ['required', 'string', new CPF, 'unique:users'],
-            'email' => ['required', 'string', 'email', 'unique:users'],
-            'password' => ['required', 'string', new PasswordStrengthRule],
-        ];
-    }
-
-    public function messages() 
-    {
-        return [
-            'name.required' => 'O nome é obrigatório.',
-            'cpf.required' => 'O CPF é obrigatório.',
-            'cpf.unique' => 'Este CPF já está em uso.',
-            'email.required' => 'O email é obrigatório.',
-            'email.email' => 'O email deve ser um endereço de email válido.',
-            'email.unique' => 'Este email já está em uso.',
-            'password.required' => 'A senha é obrigatória.',
-        ];
-    }
-}
